src/App.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* General Styles */
@layer {
  html {
    @apply scroll-smooth;
  }
}

html {
  scrollbar-color: #3bb5e6 transparent !important;
  scrollbar-width: thin;
}

body {
  font-display: swap;
  background-color: #f5f5f5;
}

/* Hero Section */
.hero {
  min-height: calc(100vh - 56.5px);

  @media screen and (min-width: 768px) {
    min-height: calc(100vh - 72px);
  }
}

/* Projects Section */

/* Navigation button */
.btn:disabled {
  background-color: #0000002c;
}

/* Footer */
footer section {
  @apply mt-20 min-h-[50vh] lg:mt-52 !important;
}

/* Utilities */
.section-title {
  @apply mx-auto mb-16 flex w-fit flex-col-reverse bg-gradient-to-r from-[#3bb5e6] to-[#fd47b4] bg-clip-text text-3xl font-bold tracking-widest text-transparent lg:text-5xl;
}

.section-title small {
  @apply text-base font-medium text-[#727272] lg:text-lg;
}

